themes/simple-theme/assets/scss/_general.scss
body {
    font: 18px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    color: #444;
    display: flex;
    flex-direction: column;
    height: 100vh; /* Full viewport height */
    max-width: 650px;
    margin: 0 auto;
    overflow-y: auto; /* Allows scrolling if content overflows */
}

nav, main, footer {
    padding: 0 1em;
}

main {
    flex: 1; /* Fills the remaining space */
}
footer {
    text-align: center;
}

h1,
h2,
h3 {
    line-height: 1.2;
}

@media (prefers-color-scheme: dark) {
    body {
        color: #c9d1d9;
        background: #0d1117;
    }

    a:link {
        color: #58a6ff;
    }

    a:visited {
        color: #8e96f0;
    }
}

